<resources>
    <string name="app_name">a-z Movies</string>
    <string name="email_layout">Email Layout</string>
    <string name="email_image">Email Image</string>
    <string name="email_edit_text">Email EditText</string>
    <string name="password_layout">Password Layout</string>
    <string name="password_image">Password Image</string>
    <string name="password_edit_text">Password EditText</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgotten"><u><b>Forgotten your password?</b></u></string>
    <string name="version_number">1.1.12.1078 | a-z Movies 2018</string>

    <!--Home screen strings-->
    <string name="app_title">A-Z Movies</string>
    <string name="favourites">Favourites</string>
    <string name="popular">Popular</string>
    <string name="tickets">Cinemas</string>
    <string name="recommendations">Movies for You</string>
    <string name="search">Search</string>

    <!-- Tickets Fragment-->
    <string name="no_cinemas_found">Sorry! There seems there is no available cinemas in your area...</string>
    <string name="movie_showings"><b><u>Movie Showings</u></b></string>

    <!-- Managers-->
    <string name="user_directory_error">Failed to create user directory</string>
    <string name="create_project_error">create_project_error</string>

    <!--Search Fragment -->
    <string name="no_search_match">Sorry! There are no films that match your search...</string>


</resources>
