<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.niamhtohill.atozmovies.login.LoginViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_login_base_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background_login">

        <View
            android:id="@+id/view"
            android:layout_width="300dp"
            android:layout_height="480dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:alpha="0.7"
            android:background="@drawable/rounded_corner_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/popcorn_image_view"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/popcorn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/popcorn_image_view"
            app:layout_constraintVertical_bias="0.077">

            <LinearLayout
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/emailImage"
                    android:layout_width="18dp"
                    android:layout_height="13dp"
                    android:src="@drawable/email" />

                <EditText
                    android:id="@+id/emailEdiText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:text="@={viewModel.email}"
                    android:textSize="15sp" />
            </LinearLayout>

            <View style="@style/separator_view" />


            <LinearLayout
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/password_image"
                    android:layout_width="18dp"
                    android:layout_height="13dp"
                    android:src="@drawable/password" />

                <EditText
                    android:id="@+id/passwordEdiText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />
            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="@{viewModel::onLoginClicked}"
                android:text="@string/login" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="@{viewModel::onSignUpClicked}"
                android:text="@string/sign_up" />

            <ProgressBar
                android:id="@+id/login_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:indeterminateTint="@color/colorTextIcons"
                android:visibility="@{viewModel.progressVisibility}" />

        </LinearLayout>

        <Button
            android:id="@+id/forgot_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/transparent"
            android:text="@string/forgotten"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/version_number"
            android:textColor="@color/colorTextIcons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>